src/test/resources/reject/compoundTypeWithFloatConstant.ul
boolean bar ()
{
    int[0.0] id1;
}
